--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,20 @@
 
 <body>
-  <h1>TEACHER NEEDS</h1>
+<center>
+  <h1>
+    EL CERRITO HIGH SCHOOL<br>
+    TEACHER NEEDS APPLICATION
+  </h1>
 
   <h2>
-    <%= link_to("List of Teachers", teachers_path) %>
-    <br>
-    <%= link_to("List of Teachers' Needs", teacher_needs_path) %>
+    <%= link_to("View List of Teachers", teachers_path) %>
+    <br><br>
+    <%= link_to("View List of Teachers' Needs", teacher_needs_path) %>
     <br>
   </h2>
+  <br><br>
+  <h3>
+    Get Help, Report Bugs, and Request Enhancements <a href="mailto:jlindsay@wccusd.net">here</a>.
+  </h3>
+</center>
 </body>
