--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,7 +1,6 @@
-<h1>Teacher List</h1>
-
 
 <table border="1">
+  <caption>Teachers and Staff</caption>
   <tr>
     <th>Last Name</th>
     <th>First Name</th>
@@ -14,8 +13,9 @@
         <td><%= teacher.first_name %></td>
         <td><%= teacher.room %></td>
         <td><%= teacher.comments %></td>
-        <td><%= link_to 'View', teacher_path(teacher) %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
+        <td><%= link_to 'View', teacher_path(teacher) %>&nbsp;&nbsp;
+            <%= link_to 'Edit', edit_teacher_path(teacher) %>
+        </td>
       </tr>
   <% end %>
 </table>
