--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>TeacherNeeds</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <!-- %= javascript_include_tag :defaults, 'data-turbolinks-track' => true % -->
+  <%= javascript_include_tag 'defaults', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
