--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -23,18 +23,25 @@
         </tr>
 
         <% @teacher.teacher_needs.each do |need| %>
-            <tr>
-              <td><%= need.status %></td>
-              <td><%= need.description %></td>
-              <td><%= need.comments %></td>
-              <td><%= show_date need.created_at %></td>
-              <td><%= show_date need.updated_at %></td>
-              <% if need.status == "Filled" %>
-                <td>Active&nbsp;&nbsp;Closed</td>
-              <% else %>
-                <td>Closed</td>
-              <% end %>
-            </tr>
+            <% if need.status != "Closed" %>
+              <tr>
+                <td><%= need.status %></td>
+                <td><%= need.description %></td>
+                <td><%= need.comments %></td>
+                <td><%= show_date need.created_at %></td>
+                <td><%= show_date need.updated_at %></td>
+                <td>
+                  <% if need.status == "Filled" %>
+                      <%= link_to('Active', reactivate_teacher_need_path(need), method: 'patch') %>
+                      &nbsp;&nbsp;
+                  <% end %>
+                  <%= link_to('Closed', close_teacher_need_path(need), method: 'patch') %>
+                </td>
+                <td>&nbsp;&nbsp;
+                  <%= link_to('Edit', edit_teacher_teacher_need_path(@teacher,need)) %>
+                </td>
+              </tr>
+            <% end %>
         <% end %>
       </table>
     </td>
@@ -58,14 +65,18 @@
 
     </td>
   </tr>
+  <!-- for placement of the links and notes, putting this into a second row, first column -->
+  <tr>
+    <td>
+      <%= link_to 'Home Page', root_path %><br>
+      <%= link_to 'Teachers List', teachers_path %><br>
+      <%= link_to 'All Teacher Needs List', teacher_needs_path %>
+
+      <h3>
+      <p>Teachers, please note that it may take up to three school days to fill your request for routine items.
+         <br>Other types of items may take longer.
+      </p>
+      </h3>
+    </td>
+  </tr>
 </table>
-
-<br><br>
-
-<%= link_to 'Home Page', root_path %><br>
-<%= link_to 'Teachers List', teachers_path %><br>
-<%= link_to 'All Teacher Needs List', teacher_needs_path %>
-
-<h3>
-<p>Teachers, please note that it may take up to three school days to fill your request.</p>
-</h3>
