Fixed CSS for Teachers page to center everything.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -22,7 +22,9 @@ th { vertical-align: baseline }
 td { vertical-align: middle }
 
 
-table   { border-collapse: collapse }
+table   {
+  border-collapse: collapse
+}
 caption {
   font-size: 40px;
   caption-side: top;
