--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,6 +1,6 @@
+<h1>Teachers and Staff</h1>
 
-<table border="1">
-  <caption>Teachers and Staff</caption>
+<table border="1" class="center">
   <tr>
     <th>Last Name</th>
     <th>First Name</th>
