--- a/app/assets/stylesheets/teachers.css.scss
+++ b/app/assets/stylesheets/teachers.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the teachers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  text-align: center;
+}
+
+table.center {
+  margin-left:auto;
+  margin-right:auto;
+}
+
