--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,8 +13,8 @@
     <br>
   </h2>
   <br><br>
-  <h3>
-    Get Help, Report Bugs, and Request Enhancements <a href="mailto:jlindsay@wccusd.net">here</a>.
-  </h3>
+  <h3>Get Help, Report Bugs, and Request Enhancements <a href="mailto:jlindsay@wccusd.net">here</a>.</h3>
+  <h4>Release 0.1 -- Build 9 -- July 2016</h4>
+
 </center>
 </body>
