--- a/app/views/teacher_needs/index.html.erb
+++ b/app/views/teacher_needs/index.html.erb
@@ -24,7 +24,7 @@
         <th>Status</th>
       </tr>
       <% @teacher_needs.each do |need| %>
-          <% if need.status != "Filled" %>
+          <% if need.status == 'Active' %>
             <tr>
               <td><%= check_box_tag(need.id) %></td>
               <td><%= need.teacher.last_name %>,&nbsp;<%= need.teacher.first_name %></td>
