--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
   </h2>
   <br><br>
   <h3>Get Help, Report Bugs, and Request Enhancements <a href="mailto:jlindsay@wccusd.net">here</a>.</h3>
-  <h4>Release 0.1 -- Build 10 -- July 6, 2016</h4>
+  <h4>Version 0.2 -- 8/21/16</h4>
 
 </center>
 </body>
