--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,11 +10,15 @@
     <%= link_to("View List of Teachers", teachers_path) %>
     <br><br>
     <%= link_to("View List of Teachers' Needs", teacher_needs_path) %>
-    <br>
+
+    <br><br>
+    <p>
+      <a href="https://goo.gl/pZ4V1Q">ECHS Wish List Form (Community Donations)</a> <br>
+    </p>
   </h2>
-  <br><br>
+
   <h3>Get Help, Report Bugs, and Request Enhancements <a href="mailto:jlindsay@wccusd.net">here</a>.</h3>
-  <h4>Version 0.2 -- 8/21/16</h4>
+  <h4>Version 0.21 -- 9/20/16</h4>
 
 </center>
 </body>
