--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -13,8 +13,8 @@
         <td><%= teacher.first_name %></td>
         <td><%= teacher.room %></td>
         <td><%= teacher.comments %></td>
-        <td><%= link_to 'View', teacher_path(teacher) %>&nbsp;&nbsp;
-            <%= link_to 'Edit', edit_teacher_path(teacher) %>
+        <td><%= link_to 'Requests', teacher_path(teacher) %>&nbsp;&nbsp;
+            <%= link_to 'Profile', edit_teacher_path(teacher) %>
         </td>
       </tr>
   <% end %>
