Trying again to commit changes to welcome.css.scss

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -19,7 +19,7 @@ th {
 
 // The next rules align the text of the header cells on their baseline and vertically center the text in each data cell:
 th { vertical-align: baseline }
-td { vertical-align: top }
+td { vertical-align: top } //// to force commit of this file
 
 
 table   {
